# poiesis

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
poiesis-cli/: Cargo.toml
poiesis-cli/src/: display.rs  main.rs  util.rs
poiesis-cli/src/commands/: append.rs  content.rs  create.rs  delete.rs  detail.rs  find.rs  insert.rs  list.rs  mod.rs  modify.rs  rename.rs
poiesis-core/: Cargo.toml
poiesis-core/src/: blocks.rs  client.rs  config.rs  error.rs  lib.rs  markdown.rs  sections.rs  types.rs
poiesis-core/tests/fixtures/: yangning_sample.txt
