[package]
name = "poiesis-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Poiesis WordPress CLI"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
pulldown-cmark = "0.13"
htmd = "0.5"
regex = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "6"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
pretty_assertions = "1"
indoc = "2"
